# IEOR4741

./: README.md  fast_matrix.cpp  functions.cpp  functions.h
Build a Local Order Book and Core Trading Infrastructure/: .gitignore  README.md  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h
High Performance Linear Algebra Kernels/: .gitignore  1.cpp  README.md  main.cpp
Momentum-Based Smart Order Client/: README.md  hft_client  hft_client.cpp  hft_server
Phase 4 Build & Benchmark a High-Frequency Trading System in C++/: CMakeLists.txt
Phase 4 Build & Benchmark a High-Frequency Trading System in C++/include/: MarketData.hpp  MatchingEngine.hpp  OrderBook.hpp  OrderManager.hpp
Phase 4 Build & Benchmark a High-Frequency Trading System in C++/src/: MarketData.cpp  MatchingEngine.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
Session 3-Measuring Virtual vs Non‑Virtual Dispatch in a Minimal HFT Order Processor/: README.md  hft_assignment.cpp  make_chart.py  results.csv
Session 4-HFT Tick Processing-CRTP vs Virtual Dispatch/: CMakeLists.txt  REPORT.md  report.docx
Session 4-HFT Tick Processing-CRTP vs Virtual Dispatch/include/: market_data.hpp  strategy_aggregators.hpp  strategy_crtp.hpp  strategy_virtual.hpp  utils.hpp
Session 4-HFT Tick Processing-CRTP vs Virtual Dispatch/src/: .gitignore  main.cpp
Session 5: Building a High-Performance C++ Order Book/: README.md  REPORT.md  order.h  order_book.cpp  test_order_book.cpp
Session-1-Fast-Matrix/: fast_matrix.cpp
Session5/: CMakeLists.txt  benchmark.cpp  order_book.h  order_book_map.cpp  order_book_map.h  order_book_vector.h  price_level.h  side_book.h
Simulate a High-Frequency Trading Engine with Signal-Based Logic in C+++/: .gitignore  README.md  main.cpp
Threaded Market Simulation and Order Routing/: Makefile  main.cpp
